...

export const Title: React.FC<Props> = ({ openDropdown, onLayout, onPressBack }) => {
  return (
    <RN.SafeAreaView style={[styles.shadow]} onLayout={onLayout}>
      <RN.TouchableOpacity
        onPress={onPressBack}
        testID={'main.bannedlist.back.button'}
      >
        <RN.Image
          source={require('../../images/chevron-left.svg')}
          style={styles.backButtonIcon}
        />
      </RN.TouchableOpacity>
      <Message id="main.chat.navigation.banned" style={styles.screenTitleText} />
      <RN.TouchableHighlight
        style={styles.kebabIconHighlight}
        underlayColor={colors.faintBackground}
        testID={'main.bannedlist.kebabicon'}
        onPress={openDropdown}
      >
        <RN.Image
          source={require('../../images/three-dot-menu.svg')}
          style={styles.kebabIcon}
        />
...
