...
          {name}
        </RN.Text>
        <RN.TouchableHighlight
          style={styles.kebabIconHighlight}
          onPress={openDropdown}
          underlayColor={colors.faintBackground}
          testID={'main.chat.title.kebabicon'}
          hitSlop={{ top: 30, bottom: 30, left: 30, right: 30 }}
        >
          <RN.Image
            source={require('../../images/three-dot-menu-chat.svg')}
            style={styles.kebabIcon}
          />
...
